# chat_bot

./: Dockerfile  README.md  pyproject.toml
chat_bot/: __main__.py  app.py  bot.py  composition.py  config.py  data.parquet  data_mcp_client.py  data_mcp_server.py  data_without_full_text.parquet  sys_prompt.py  vector_retriever.py
chat_bot/static/: app.js  style.css
chat_bot/templates/: index.html
chat_bot_preprocessing/: __main__.py  app.py  azure_doc_service.py  azure_open_ai.py  composition.py  config.py  item_summarizer.py  project_models.py  prompts.py  vectorizer.py
chat_bot_preprocessing/static/: styles.css
chat_bot_preprocessing/templates/: index.html
